added initial html layout

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -29,7 +29,56 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
-      <!-- Timeblocks go here -->
+      <div class="row hour">
+        <div class="col-1 time-block">8 AM</div>
+        <textarea class="col-10 description"></textarea>
+        <button id="save-tasks" class="col-1 saveBtn">Save</button>
+      </div>
+      <div class="row hour">
+        <div class="col-1 time-block">9 AM</div>
+        <textarea class="col-10 description"></textarea>
+        <button id="save-tasks" class="col-1 saveBtn">Save</button>
+      </div>
+      <div class="row hour">
+        <div class="col-1 time-block">10 AM</div>
+        <textarea class="col-10 description"></textarea>
+        <button id="save-tasks" class="col-1 saveBtn">Save</button>
+      </div>
+      <div class="row hour">
+        <div class="col-1 time-block">11 AM</div>
+        <textarea class="col-10 description"></textarea>
+        <button id="save-tasks" class="col-1 saveBtn">Save</button>
+      </div>
+      <div class="row hour">
+        <div class="col-1 time-block">12 PM</div>
+        <textarea class="col-10 description"></textarea>
+        <button id="save-tasks" class="col-1 saveBtn">Save</button>
+      </div>
+      <div class="row hour">
+        <div class="col-1 time-block">1 PM</div>
+        <textarea class="col-10 description"></textarea>
+        <button id="save-tasks" class="col-1 saveBtn">Save</button>
+      </div>
+      <div class="row hour">
+        <div class="col-1 time-block">2 PM</div>
+        <textarea class="col-10 description"></textarea>
+        <button id="save-tasks" class="col-1 saveBtn">Save</button>
+      </div>
+      <div class="row hour">
+        <div class="col-1 time-block">3 PM</div>
+        <textarea class="col-10 description"></textarea>
+        <button id="save-tasks" class="col-1 saveBtn">Save</button>
+      </div>
+      <div class="row hour">
+        <div class="col-1 time-block">4 PM</div>
+        <textarea class="col-10 description"></textarea>
+        <button id="save-tasks" class="col-1 saveBtn">Save</button>
+      </div>
+      <div class="row hour">
+        <div class="col-1 time-block">5 PM</div>
+        <textarea class="col-10 description"></textarea>
+        <button id="save-tasks" class="col-1 saveBtn">Save</button>
+      </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
