--- a/Develop/index.html
+++ b/Develop/index.html
@@ -31,53 +31,53 @@
     <div class="container">
       <div class="row hour">
         <div class="col-1 time-block">8 AM</div>
-        <textarea class="col-10 description" id="8-am"></textarea>
-        <button id="8-am" class="col-1 saveBtn">Save</button>
+        <textarea class="col-10 description" id="8"></textarea>
+        <button id="8" class="col-1 saveBtn">Save</button>
       </div>
-      <div class="row hour 9-am">
+      <div class="row hour">
         <div class="col-1 time-block">9 AM</div>
-        <textarea class="col-10 description" id="9-am"></textarea>
-        <button id="9-am" class="col-1 saveBtn">Save</button>
+        <textarea class="col-10 description" id="9"></textarea>
+        <button id="9" class="col-1 saveBtn">Save</button>
       </div>
       <div class="row hour">
         <div class="col-1 time-block">10 AM</div>
-        <textarea class="col-10 description" id="10-am"></textarea>
-        <button id="10-am" class="col-1 saveBtn">Save</button>
+        <textarea class="col-10 description" id="10"></textarea>
+        <button id="10" class="col-1 saveBtn">Save</button>
       </div>
       <div class="row hour">
         <div class="col-1 time-block">11 AM</div>
-        <textarea class="col-10 description" id="11-am"></textarea>
-        <button id="11-am" class="col-1 saveBtn">Save</button>
+        <textarea class="col-10 description" id="11"></textarea>
+        <button id="11" class="col-1 saveBtn">Save</button>
       </div>
       <div class="row hour">
         <div class="col-1 time-block">12 PM</div>
-        <textarea class="col-10 description" id="12-pm"></textarea>
-        <button id="12-pm" class="col-1 saveBtn">Save</button>
+        <textarea class="col-10 description" id="12"></textarea>
+        <button id="12" class="col-1 saveBtn">Save</button>
       </div>
       <div class="row hour">
         <div class="col-1 time-block">1 PM</div>
-        <textarea class="col-10 description" id="1-pm"></textarea>
-        <button id="1-pm" class="col-1 saveBtn">Save</button>
+        <textarea class="col-10 description" id="13"></textarea>
+        <button id="13" class="col-1 saveBtn">Save</button>
       </div>
       <div class="row hour">
         <div class="col-1 time-block">2 PM</div>
-        <textarea class="col-10 description" id="2-pm"></textarea>
-        <button id="2-pm" class="col-1 saveBtn">Save</button>
+        <textarea class="col-10 description" id="14"></textarea>
+        <button id="14" class="col-1 saveBtn">Save</button>
       </div>
       <div class="row hour">
         <div class="col-1 time-block">3 PM</div>
-        <textarea class="col-10 description" id="3-pm"></textarea>
-        <button id="3-pm" class="col-1 saveBtn">Save</button>
+        <textarea class="col-10 description" id="15"></textarea>
+        <button id="15" class="col-1 saveBtn">Save</button>
       </div>
       <div class="row hour">
         <div class="col-1 time-block">4 PM</div>
-        <textarea class="col-10 description" id="4-pm"></textarea>
-        <button id="4-pm" class="col-1 saveBtn">Save</button>
+        <textarea class="col-10 description" id="16"></textarea>
+        <button id="16" class="col-1 saveBtn">Save</button>
       </div>
       <div class="row hour">
         <div class="col-1 time-block">5 PM</div>
-        <textarea class="col-10 description" id="5-pm"></textarea>
-        <button id="5-pm" class="col-1 saveBtn">Save</button>
+        <textarea class="col-10 description" id="17"></textarea>
+        <button id="17" class="col-1 saveBtn">Save</button>
       </div>
     </div>
 
